force-app/main/default/objects/Technical_Bulletin__kav/fields/Attachment_4__c.field-meta.xml
<CustomField>
    <fullName>Attachment_4__c</fullName>
    <label>Attachment 4</label>
    <type>File</type>
</CustomField>